--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.461.0",
+    "@supabase/supabase-js": "^2.39.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
