--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "ts-node-dev src/index.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.461.0",
     "@supabase/supabase-js": "^2.39.0",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "sqids": "^0.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5"
   }
 }
